k8s/emp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emp-info
  namespace: employee

spec:
  replicas: 2

  selector:
    matchLabels:
      app: emp-info

  template:
    metadata:
      labels:
        app: emp-info

    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
          

      containers:
      - name: emp-info
        image: ravikumardahat/employee-connect:72

        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 1000
          readOnlyRootFilesystem: true
          capabilities:
             drop:
               - All 

        ports:
        - containerPort: 5000

        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
