k8s/mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
   name: mysql
spec:
    serviceName: mysql
    replicas: 1
    selector:
        matchLabels:
             app: mysql
    template:
        metadata:
            labels:
                app: mysql
        spec:
             containers:
                 - name: mysql
                   image: mysql:8.0
                   ports:
                      - containerPort: 3306

                   volumeMounts:
                      - name: mysql-data
                        mountPath: /var/lib/mysql

    volumeClaimTemplates:
     - metadata:
         name: mysql-data
       spec:
         accessModes:
            - ReadWriteOnce
         storageClassName: local-path
         resources:
             requests:
                storage: 1Gi
