k8s/emp-service.yaml
apiVersion: v1
kind: Service
metadata:
   name: emp-service
   namespace: employee
spec:
   selector:
      app: emp-info
   ports:
       - protocol: TCP
         port: 80
         targetPort: 5000
   type: ClusterIP
