k8s/emp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: emp-ingress
    namespace: employee
spec:
    ingressClassName: nginx
    rules:
        - host: emp.lab.local
          http:
             paths:
                - path: /
                  pathType: Prefix
                  backend:
                     service:
                         name: emp-service 
                         port:
                           number: 80
